-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.5.0
-
None
-
df39295f23c7d9ead8481a95b9c78caaff1e8bc8
QXcbConnection::updateScreens accesses QGuiApplicationPrivate::platform_integration before it is constructed:
QGuiApplication::init_platform (qguiapplication.cpp:1008):
QGuiApplicationPrivate::platform_integration = QPlatformIntegrationFactory::create(name, arguments, argc, argv, platformPluginPath);
QXcbIntegrationPlugin::create (qxcbmain.cpp:50):
return new QXcbIntegration(parameters, argc, argv);
QXcbIntegration::QXcbIntegration (qxcbintegration.cpp:166):
m_connections << new QXcbConnection(m_nativeInterface.data(), m_canGrab, displayName);
QXcbConnection::QXcbConnection (qxcbconnection.cpp:333):
updateScreens();
QXcbConnection::updateScreens (qxcbconnection.cpp:243):
QXcbIntegration *integration = static_cast<QXcbIntegration *>(QGuiApplicationPrivate::platformIntegration());
- relates to
-
QTBUG-42985 Qt GUI application disappear or crash when no screens are available
-
- Closed
-
| For Gerrit Dashboard: QTBUG-44388 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 105865,8 | Have XCB/Windows platform integration classes keep their own instance pointer | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 106304,2 | Delay calling QCoreApplication::init until class instance is fully constructed | dev | qt/qtbase | Status: ABANDONED | -1 | 0 |